<resources>
    <string name="app_name">ECommerceDemo</string>
    <string name="stayHigh">Stay High</string>
    <string name="stay_happy">Stay Happy</string>
    <string name="join">Join</string>
    <string name="log_in">Log in</string>
    <string name="Always">always</string>
    <string name="create_your">Create Your</string>
    <string name="account">account</string>
    <string name="Email_Address">Email Address</string>
    <string name="password">Password</string>
    <string name="by_creating_an_account_you_are_agree_with_our_terms_and_conditions">by creating an account you are agree with our terms and conditions</string>
    <string name="create_an_account">Create an account</string>
    <string name="alreadyaMember">Already a member?</string>
    <string name="videos">Videos</string>
    <string name="edibies">Edibies</string>
    <string name="top_categories">Top Categories</string>
    <string name="demoMail">example@mail.com</string>
    <string name="explore">Explore</string>
    <string name="vape">Vape</string>
    <string name="extracts">Extracts</string>
    <string name="edibles">Edibles</string>
    <string name="flowers">Flowers</string>
    <string name="accesories">Accesories</string>
    <string name="logout">Logout</string>
    <string name="one">1</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="search">Search</string>
    <string name="eables">Eables</string>
    <string name="pure_sun_farms">Pure Sun Farms</string>
    <string name="description">Description</string>
    <string name="demoDescription">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available</string>
    <string name="myCart">My Cart</string>
    <string name="name">Name</string>
    <string name="vapes">Vapes</string>
    <string name="searchByName">Search By Name</string>
    <string name="products">Products</string>
</resources>