<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_explore"
                    android:title="@string/explore"
                    />
                <item
                    android:id="@+id/menu_vape"
                    android:title="@string/vape"/>


                <item
                    android:id="@+id/menu_extracts"
                    android:title="@string/extracts"/>

                <item
                    android:id="@+id/menu_edibles"
                    android:title="@string/edibles"/>

                <item
                    android:id="@+id/menu_flowers"
                    android:title="@string/flowers"/>

                <item
                    android:id="@+id/menu_accesories"
                    android:title="@string/accesories"/>

        </group>

        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_logout"
                    android:title="@string/logout"
                    />
        </group>

</menu>